# baxter_pendulum

./: .gitignore  README.md  baxter.sh
src/: .rosinstall.bak  CMakeLists.txt  pendulum_state_sim.py
src/baxter_common/baxter_description/: CMakeLists.txt  package.xml
src/baxter_common/baxter_description/include/: pose_plugin.h
src/baxter_common/baxter_description/src/: pose_plugin.cpp
src/baxter_common/baxter_description/urdf/: baxter_pendulum.gazebo.xacro  baxter_pendulum.urdf.xacro  pendulum_gripper.xacro
src/baxter_common/baxter_description/urdf/baxter_base/: baxter_base.gazebo.xacro
src/baxter_common/rethink_ee_description/urdf/electric_gripper/: rethink_electric_gripper.xacro
src/baxter_common/rethink_ee_description/urdf/pendulum_gripper/: pendulum_gripper.xacro
src/baxter_examples/scripts/: .ik_service_client.py.swp  baxter_left_dyn_params.py  baxter_left_dynamics.py  baxter_left_kinematics.py  ik_service_client.py  joint_torque_springs.py  offset_util.py  sympybotics_left_baxter.py
src/baxter_simulator/baxter_gazebo/launch/: .baxter_pendulum.launch.swp  baxter_pendulum.launch
src/baxter_simulator/baxter_gazebo/scripts/: pendulum_state_sim.py
src/baxter_simulator/baxter_sim_hardware/launch/: baxter_sdk_control.launch  baxter_sdk_control_pendulum.launch
src/baxter_simulator/baxter_sim_kinematics/launch/: baxter_sim_kinematics_pendulum.launch
